[package]

name = "phant"
version = "0.1.5"
authors = [ "ethan.frei@gmail.com" ]
description = "A library for manipulating data on a http://phant.io server."

documentation = "http://static.ethanfrei.com/phant/phant"
homepage = "https://github.com/freiguy1/phant-rust"
repository = "https://github.com/freiguy1/phant-rust"
readme = "README.md"
keywords = ["phant", "sparkfun"]
license = "MIT"

[dependencies]
url = "1.2.0"
hyper = "0.9.10"
serde = "0.8.1"
serde_json = "0.8.1"
