[package]

name = "phant"
version = "0.1.6"
authors = [ "ethan.frei@gmail.com" ]
description = "A library for manipulating data on a http://phant.io server."

documentation = "https://docs.rs/crate/phant"
homepage = "https://github.com/freiguy1/phant-rust"
repository = "https://github.com/freiguy1/phant-rust"
readme = "README.md"
keywords = ["phant", "sparkfun"]
license = "MIT"

[dependencies]
url = "1.6.0"
hyper = "0.11.9"
serde = "1.0.24"
serde_json = "1.0.8"
