[package]

name = "phant"
version = "0.1.6"
authors = [ "ethan.frei@gmail.com" ]
description = "A library for manipulating data on a http://phant.io server."

documentation = "https://docs.rs/crate/phant"
homepage = "https://github.com/freiguy1/phant-rust"
repository = "https://github.com/freiguy1/phant-rust"
readme = "README.md"
keywords = ["phant", "sparkfun"]
license = "MIT"

[dependencies]
url = "1.6.0"
hyper = "0.11.9"
hyper-tls = "0.1.2"
native-tls = "0.1.4"
futures = "0.1.17"
tokio-core = "0.1.10"
serde = "1.0.24"
serde_json = "1.0.8"
